--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "datatables.net-bs5": "^2.0.5",
+        "datatables.net-buttons-bs5": "^3.0.2",
+        "jszip": "^3.10.1",
+        "pdfmake": "^0.2.10"
     }
 }
