--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"jszip": "^3.10.1",
 		"pdfmake": "^0.2.10",
+		"selenium-webdriver": "^4.20.0",
 		"vee-validate": "^4.12.6",
 		"yup": "^1.2.0"
 	}
